# shipay-challenge

./: .dockerignore  .env.dev  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
challenge/: 1.sql  2.py  3.py  4.py  5.md  6.md  7.txt  README.md
examples/: dbdiagram.dbml  flasgger.yaml  sqlalchemy.py
src/: config.py  main.py  swagger.py
src/database/: initdb.sql  model.py  postgres.py
src/modules/: service.py
src/modules/claims/: service.py
src/modules/roles/: service.py
src/modules/user_claims/: service.py
src/modules/users/: service.py
src/routes/: blueprints.py  create_user.yml  query_1.yml  role_description.yml  route.py
src/routes/claims/: delete.yml  get.yml  post.yml  route.py
src/routes/roles/: delete.yml  get.yml  post.yml  route.py
src/routes/user_claims/: delete.yml  get.yml  post.yml  route.py
src/routes/users/: delete.yml  get.yml  post.yml  route.py
tests/: __init__.py
