[tool.poetry]
name = "flask_template"
version = "0.1.0"
description = "flask project template"
authors = ["Th1Alexandre <th1alexandre.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
flasgger = "^0.9.5"
sqlalchemy = "^2.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
psycopg = {extras = ["binary"], version = "^3.1.4"}


[tool.poetry.group.prod.dependencies]
psycopg = {extras = ["c"], version = "^3.1.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
